# gemini-chatbot-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
components/: chat.py  feedback.py  sidebar.py
services/: google_api.py  response.py
utils/: state_manager.py  streaming.py
